--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
 @media screen and (min-width: 768px) {
   .bookList {
     grid-template-columns: repeat(3, 1fr);
+    align-items: start;
   }
 }
 
@@ -45,4 +46,7 @@ body {
   font-size: 0.75rem;
   margin-top: 0.5rem;
   letter-spacing: 2px;
+}
+.book p {
+  margin: 1rem 0 0.5rem;
 }
